test/langtools/tools/javac/valhalla/lworld-values/ConflictingSuperInterfaceTest.out
ConflictingSuperInterfaceTest.java:12:22: compiler.err.cant.inherit.diff.arg: ConflictingSuperInterfaceTest.I, java.lang.Integer, java.lang.String
1 error
